dinoco_docs/src/content/v0.0.1/en-us/orm/update.mdx
export const title = "update";

# update

Used to update filtered records.

---

## What you can do

- `.cond(...)`: defines which records will be updated.
- `.values(item)`: specifies the new values for the record.
- `.connect(...)`: creates writable relation links.
- `.disconnect(...)`: removes writable relation links.
- `.returning::&lt;T&gt;()`: returns the updated records in a typed projection.
- `.execute(&client)`: executes the update in the database.

## Return

Without `.returning::&lt;T&gt;()`, the return is:

```rust
DinocoResult<()>
```

With `.returning::&lt;T&gt;()`, the return becomes:

```rust
DinocoResult<Vec<T>>
```

Note:

- `update().returning()` does not support relation writes with `.connect(...)` or `.disconnect(...)`.

## Example of field update

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .values(User {
        id: 10,
        email: "novo@acme.com".to_string(),
        name: "New Name".to_string(),
    })
    .execute(&client)
    .await?;
```

## Example with connect(...)

Used to connect writable relations, typically Many to Many.

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .connect(|r| r.roles().slug.eq("admin"))
    .execute(&client)
    .await?;
```

## Example with disconnect(...)

Used to disconnect relations.

```rust
dinoco::update::<User>()
    .cond(|w| w.id.eq(10))
    .disconnect(|r| r.roles().slug.eq("guest"))
    .execute(&client)
    .await?;
```

## Filters available in connect and disconnect

- `eq`
- `neq`
- `gt`
- `gte`
- `lt`
- `lte`
- `in_values`
- `not_in_values`
- `is_null`
- `is_not_null`
- `includes`
- `starts_with`
- `ends_with`

## Next steps

- [**`update_many::&lt;M&gt;()`**](/v0.0.1/orm/update-many): batch update.
- [**`find_and_update::&lt;M&gt;()`**](/v0.0.1/orm/find-and-update): atomic update with return.
